--- a/config.yaml
+++ b/config.yaml
@@ -10,6 +10,11 @@ llm:
   model: "gpt-4"
   temperature: 0.7
 
+translator:
+  model: "gpt-4"
+  temperature: 0.7
+  prompt: "Translate the following text to {target_lang}:\n{text}"
+
 output_dir: "output"
 temp_dir: "temp"
 log_dir: "logs"
