--- a/config.yaml
+++ b/config.yaml
@@ -15,6 +15,12 @@ translator:
   temperature: 0.7
   prompt: "Translate the following text to {target_lang}:\n{text}"
 
+proofreader:
+  model: "gpt-4o"
+  style: "general"
+  temperature: 0.0
+  prompt: "Proofread the following text. Fix grammar, style, and readability issues in {style} style. Return only the corrected text."
+
 output_dir: "output"
 temp_dir: "temp"
 log_dir: "logs"
