--- a/requirements.txt
+++ b/requirements.txt
@@ -19,3 +19,8 @@ uvicorn>=0.24.0
 numpy>=1.24.0
 torch>=2.1.0
 transformers>=4.36.0 
+
+PyYAML>=6.0
+pytesseract>=0.3.10
+pdf2image>=1.16.3
+Pillow>=10.0.0
