--- a/requirements-ci.txt
+++ b/requirements-ci.txt
@@ -12,3 +12,8 @@ flake8>=6.1.0
 mypy>=1.5.1
 pytesseract>=0.3.10
 pdf2image>=1.16.3
+openai>=1.0.0
+tiktoken>=0.5.0
+language-tool-python>=2.7.1
+PyYAML>=6.0
+Pillow>=10.0.0
