Update prompts and adjust defaults

--- a/config.yaml
+++ b/config.yaml
@@ -11,15 +11,15 @@ llm:
   temperature: 0.7
 
 translator:
-  model: "gpt-4.1-mini"
+  model: "gpt-4"
   temperature: 0.7
-  prompt: "Translate the following text to {target_lang}:\n{text}"
+  prompt: "Translate the following text to {target_lang}:\n{text}\n翻訳結果のみを返してください。"
 
 proofreader:
-  model: "gpt-4.1-mini"
+  model: "gpt-4o"
   style: "general"
   temperature: 0.0
-  prompt: "Proofread the following text. Fix grammar, style, and readability issues in {style} style. Return only the corrected text."
+  prompt: "Proofread the following text. Fix grammar, style, and readability issues in {style} style. 文の意味を変えないこと。未知の用語はそのまま残すこと。結果だけを出力してください。"
 
 whisper:
   model: "large"
