Add proofreader enable flag

--- a/config.yaml
+++ b/config.yaml
@@ -19,6 +19,7 @@ proofreader:
   model: "gpt-4o"
   style: "general"
   temperature: 0.0
+  enabled: true
   prompt: "Proofread the following text. Fix grammar, style, and readability issues in {style} style. 文の意味を変えないこと。未知の用語はそのまま残すこと。結果だけを出力してください。"
 
 whisper:
